新增加业务共用接口模块，使得互不依赖的模块可以通过共用接口实现通信；

--- a/VoltronBaseApp/ModDemoInterface/build.gradle
+++ b/VoltronBaseApp/ModDemoInterface/build.gradle
@@ -13,11 +13,6 @@ android {
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
-        javaCompileOptions {
-            annotationProcessorOptions {
-                arguments = [VOLTRON_ROUTER_MODULE_NAME: project.getName()]
-            }
-        }
     }
 
     buildTypes {
@@ -30,15 +25,10 @@ android {
 }
 
 dependencies {
-    implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation project(':VRouterApi')
-    implementation project(':VRouterAnnotation')
-    implementation 'com.android.support:support-v4:27.1.1'
-    annotationProcessor project(':VRouterCompiler')
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+
     implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation project(':ModDemoInterface')
 }
